DE142540;-Fixed reports-name tooltips overflow

--- a/production/src/file-history/file-history.css
+++ b/production/src/file-history/file-history.css
@@ -345,4 +345,5 @@ button.add-data-btn:focus {
 
 .rename-popover-width{
   max-width: 280px;
+  word-wrap: break-word;
 }
